--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     #hole {
         width: 50px;
         height: 150px;
-        background-color: greenyellow;
+        background-image: url (moss1.webp);
         position: relative;
         left: 400px;
         top:-500px; 
